changes in the display message

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,9 @@
     "titleBar.inactiveBackground": "#cf6d2899",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#cf6d28"
+  "peacock.color": "#cf6d28",
+  "appService.zipIgnorePattern": [
+    "node_modules{,/**}",
+    ".vscode{,/**}"
+  ]
 }
